// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewFilterForm component Default view filter component 1`] = `
<div>
  <div>
    <div
      class="filters__none"
    >
      <div
        class="filters__none-title"
      >
        
        viewFilterContext.noFilterTitle
      
      </div>
       
      <div
        class="filters__none-description"
      >
        
        viewFilterContext.noFilterText
      
      </div>
    </div>
  </div>
   
  <div
    class="filters__items"
  />
   
  <div
    class="filters_footer"
  >
    <a
      class="filters__add"
    >
      <i
        class="fas fa-plus"
      />
      
      viewFilterContext.addFilter
    </a>
     
    <!---->
  </div>
</div>
`;

exports[`ViewFilterForm component Full view filter component 1`] = `
<div>
  <!---->
   
  <div
    class="filters__items"
  >
    <div
      class="filters__item"
    >
      <a
        class="filters__remove"
      >
        <i
          class="fas fa-times"
        />
      </a>
       
      <div
        class="filters__operator"
      >
        <span>
          viewFilterContext.where
        </span>
         
        <!---->
         
        <!---->
      </div>
       
      <div
        class="filters__field"
      >
        <div
          class="dropdown dropdown--tiny"
          tabindex="0"
        >
          <a
            class="dropdown__selected"
          >
            <!---->
             
            <!---->
            
        Name
       
            <i
              class="dropdown__toggle-icon fas fa-caret-down"
            />
          </a>
           
          <div
            class="dropdown__items hidden dropdown__items--fixed"
          >
            <div
              class="select__search"
            >
              <i
                class="select__search-icon fas fa-search"
              />
               
              <input
                class="select__search-input"
                placeholder="action.search"
                tabindex="0"
                type="text"
              />
            </div>
             
            <ul
              class="select__items"
              tabindex=""
            >
              <li
                class="select__item active"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Name"
                    >
                      Name
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Stars"
                    >
                      Stars
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Flag"
                    >
                      Flag
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
            </ul>
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="filters__type"
      >
        <div
          class="dropdown dropdown--tiny"
          tabindex="0"
        >
          <a
            class="dropdown__selected"
          >
            <!---->
             
            <!---->
            
        viewFilter.is
       
            <i
              class="dropdown__toggle-icon fas fa-caret-down"
            />
          </a>
           
          <div
            class="dropdown__items hidden dropdown__items--fixed"
          >
            <div
              class="select__search"
            >
              <i
                class="select__search-icon fas fa-search"
              />
               
              <input
                class="select__search-input"
                placeholder="action.search"
                tabindex="0"
                type="text"
              />
            </div>
             
            <ul
              class="select__items"
              tabindex=""
            >
              <li
                class="select__item active"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.is"
                    >
                      viewFilter.is
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.isNot"
                    >
                      viewFilter.isNot
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.contains"
                    >
                      viewFilter.contains
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.containsNot"
                    >
                      viewFilter.containsNot
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.containsWord"
                    >
                      viewFilter.containsWord
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.doesntContainWord"
                    >
                      viewFilter.doesntContainWord
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.lengthIsLowerThan"
                    >
                      viewFilter.lengthIsLowerThan
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.isEmpty"
                    >
                      viewFilter.isEmpty
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.isNotEmpty"
                    >
                      viewFilter.isNotEmpty
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
            </ul>
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="filters__value"
      >
        <input
          class="input filters__value-input"
          type="text"
        />
      </div>
    </div>
    <div
      class="filters__item"
    >
      <a
        class="filters__remove"
      >
        <i
          class="fas fa-times"
        />
      </a>
       
      <div
        class="filters__operator"
      >
        <!---->
         
        <div
          class="dropdown dropdown--tiny"
          tabindex="0"
        >
          <a
            class="dropdown__selected"
          >
            <!---->
             
            <!---->
            
        viewFilterContext.and
       
            <i
              class="dropdown__toggle-icon fas fa-caret-down"
            />
          </a>
           
          <div
            class="dropdown__items hidden dropdown__items--fixed"
          >
            <!---->
             
            <ul
              class="select__items"
              tabindex=""
            >
              <li
                class="select__item active"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilterContext.and"
                    >
                      viewFilterContext.and
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
               
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilterContext.or"
                    >
                      viewFilterContext.or
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
            </ul>
             
            <!---->
             
            <!---->
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="filters__field"
      >
        <div
          class="dropdown dropdown--tiny"
          tabindex="0"
        >
          <a
            class="dropdown__selected"
          >
            <!---->
             
            <!---->
            
        Stars
       
            <i
              class="dropdown__toggle-icon fas fa-caret-down"
            />
          </a>
           
          <div
            class="dropdown__items hidden dropdown__items--fixed"
          >
            <div
              class="select__search"
            >
              <i
                class="select__search-icon fas fa-search"
              />
               
              <input
                class="select__search-input"
                placeholder="action.search"
                tabindex="0"
                type="text"
              />
            </div>
             
            <ul
              class="select__items"
              tabindex=""
            >
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Name"
                    >
                      Name
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item active"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Stars"
                    >
                      Stars
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Flag"
                    >
                      Flag
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
            </ul>
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="filters__type"
      >
        <div
          class="dropdown dropdown--tiny"
          tabindex="0"
        >
          <a
            class="dropdown__selected"
          >
            <!---->
             
            <!---->
            
        viewFilter.is
       
            <i
              class="dropdown__toggle-icon fas fa-caret-down"
            />
          </a>
           
          <div
            class="dropdown__items hidden dropdown__items--fixed"
          >
            <div
              class="select__search"
            >
              <i
                class="select__search-icon fas fa-search"
              />
               
              <input
                class="select__search-input"
                placeholder="action.search"
                tabindex="0"
                type="text"
              />
            </div>
             
            <ul
              class="select__items"
              tabindex=""
            >
              <li
                class="select__item active"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.is"
                    >
                      viewFilter.is
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.isNot"
                    >
                      viewFilter.isNot
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.higherThan"
                    >
                      viewFilter.higherThan
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.lowerThan"
                    >
                      viewFilter.lowerThan
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
            </ul>
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="filters__value"
      >
        <div
          class="filters__value-rating"
        >
          <div
            class="rating color--dark-orange editing"
          >
            <i
              class="fas rating__star fa-star rating__star--selected"
            />
            <i
              class="fas rating__star fa-star rating__star--selected"
            />
            <i
              class="fas rating__star fa-star"
            />
            <i
              class="fas rating__star fa-star"
            />
            <i
              class="fas rating__star fa-star"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="filters_footer"
  >
    <a
      class="filters__add"
    >
      <i
        class="fas fa-plus"
      />
      
      viewFilterContext.addFilter
    </a>
     
    <div>
      <div
        class="switch switch--has-content"
      >
        viewFilterContext.disableAllFilters
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewFilterForm component Test rating filter 1`] = `
<div>
  <!---->
   
  <div
    class="filters__items"
  >
    <div
      class="filters__item"
    >
      <a
        class="filters__remove"
      >
        <i
          class="fas fa-times"
        />
      </a>
       
      <div
        class="filters__operator"
      >
        <span>
          viewFilterContext.where
        </span>
         
        <!---->
         
        <!---->
      </div>
       
      <div
        class="filters__field"
      >
        <div
          class="dropdown dropdown--tiny"
          tabindex="0"
        >
          <a
            class="dropdown__selected"
          >
            <!---->
             
            <!---->
            
        Stars
       
            <i
              class="dropdown__toggle-icon fas fa-caret-down"
            />
          </a>
           
          <div
            class="dropdown__items hidden dropdown__items--fixed"
          >
            <div
              class="select__search"
            >
              <i
                class="select__search-icon fas fa-search"
              />
               
              <input
                class="select__search-input"
                placeholder="action.search"
                tabindex="0"
                type="text"
              />
            </div>
             
            <ul
              class="select__items"
              tabindex=""
            >
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Name"
                    >
                      Name
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item active"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Stars"
                    >
                      Stars
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Flag"
                    >
                      Flag
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
            </ul>
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="filters__type"
      >
        <div
          class="dropdown dropdown--tiny"
          tabindex=""
        >
          <a
            class="dropdown__selected"
          >
            <!---->
             
            <!---->
            
        viewFilter.is
       
            <i
              class="dropdown__toggle-icon fas fa-caret-down"
            />
          </a>
           
          <div
            class="dropdown__items dropdown__items--fixed"
            style="top: 0px; left: 0px;"
          >
            <div
              class="select__search"
            >
              <i
                class="select__search-icon fas fa-search"
              />
               
              <input
                class="select__search-input"
                placeholder="action.search"
                tabindex="0"
                type="text"
              />
            </div>
             
            <ul
              class="select__items prevent-scroll"
              tabindex=""
            >
              <li
                class="select__item active hover"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.is"
                    >
                      viewFilter.is
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.isNot"
                    >
                      viewFilter.isNot
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.higherThan"
                    >
                      viewFilter.higherThan
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.lowerThan"
                    >
                      viewFilter.lowerThan
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
            </ul>
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="filters__value"
      >
        <div
          class="filters__value-rating"
        >
          <div
            class="rating color--dark-orange editing"
          >
            <i
              class="fas rating__star fa-star rating__star--selected"
            />
            <i
              class="fas rating__star fa-star rating__star--selected"
            />
            <i
              class="fas rating__star fa-star"
            />
            <i
              class="fas rating__star fa-star"
            />
            <i
              class="fas rating__star fa-star"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="filters_footer"
  >
    <a
      class="filters__add"
    >
      <i
        class="fas fa-plus"
      />
      
      viewFilterContext.addFilter
    </a>
     
    <div>
      <div
        class="switch switch--has-content"
      >
        viewFilterContext.disableAllFilters
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewFilterForm component Test rating filter 2`] = `
<div>
  <!---->
   
  <div
    class="filters__items"
  >
    <div
      class="filters__item"
    >
      <a
        class="filters__remove"
      >
        <i
          class="fas fa-times"
        />
      </a>
       
      <div
        class="filters__operator"
      >
        <span>
          viewFilterContext.where
        </span>
         
        <!---->
         
        <!---->
      </div>
       
      <div
        class="filters__field"
      >
        <div
          class="dropdown dropdown--tiny"
          tabindex="0"
        >
          <a
            class="dropdown__selected"
          >
            <!---->
             
            <!---->
            
        Stars
       
            <i
              class="dropdown__toggle-icon fas fa-caret-down"
            />
          </a>
           
          <div
            class="dropdown__items hidden dropdown__items--fixed"
          >
            <div
              class="select__search"
            >
              <i
                class="select__search-icon fas fa-search"
              />
               
              <input
                class="select__search-input"
                placeholder="action.search"
                tabindex="0"
                type="text"
              />
            </div>
             
            <ul
              class="select__items"
              tabindex=""
            >
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Name"
                    >
                      Name
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item active"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Stars"
                    >
                      Stars
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="Flag"
                    >
                      Flag
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
            </ul>
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="filters__type"
      >
        <div
          class="dropdown dropdown--tiny"
          tabindex="0"
        >
          <a
            class="dropdown__selected"
          >
            <!---->
             
            <!---->
            
        viewFilter.is
       
            <i
              class="dropdown__toggle-icon fas fa-caret-down"
            />
          </a>
           
          <div
            class="dropdown__items hidden dropdown__items--fixed"
            style="top: 0px; left: 0px;"
          >
            <div
              class="select__search"
            >
              <i
                class="select__search-icon fas fa-search"
              />
               
              <input
                class="select__search-input"
                placeholder="action.search"
                tabindex="0"
                type="text"
              />
            </div>
             
            <ul
              class="select__items prevent-scroll"
              tabindex=""
            >
              <li
                class="select__item active hover"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.is"
                    >
                      viewFilter.is
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.isNot"
                    >
                      viewFilter.isNot
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.higherThan"
                    >
                      viewFilter.higherThan
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
              <li
                class="select__item"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="viewFilter.lowerThan"
                    >
                      viewFilter.lowerThan
                    </span>
                  </div>
                   
                  <!---->
                </a>
              </li>
            </ul>
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="filters__value"
      >
        <div
          class="filters__value-rating"
        >
          <div
            class="rating color--dark-orange editing"
          >
            <i
              class="fas rating__star fa-star rating__star--selected"
            />
            <i
              class="fas rating__star fa-star rating__star--selected"
            />
            <i
              class="fas rating__star fa-star rating__star--selected"
            />
            <i
              class="fas rating__star fa-star rating__star--selected"
            />
            <i
              class="fas rating__star fa-star rating__star--selected"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="filters_footer"
  >
    <a
      class="filters__add"
    >
      <i
        class="fas fa-plus"
      />
      
      viewFilterContext.addFilter
    </a>
     
    <div>
      <div
        class="switch switch--has-content"
      >
        viewFilterContext.disableAllFilters
      </div>
    </div>
  </div>
</div>
`;
